<resources>
    <string name="app_name">Project2</string>
    <string name="neighborhood_name">Uptown Oakland</string>
    <string name="search_button">SEARCH</string>
    <string name="restaurants_count">Restaurants found:</string>
    <string name="search_by_name_hint">Search by name:</string>
    <string name="search_by_food_hint">Search by food:</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search_hint">Search by restaurant name</string>
    <string name="inFavorites"> In Favorites</string>
    <string name="addToFavorites"> Add to Favorites</string>
    <string name="saved_restaurants">Your saved restaurants:</string>
    <string name="one_dollar">$</string>
    <string name="two_dollars">$$</string>
    <string name="three_dollars">$$$</string>
    <string name="four_dollars">$$$$</string>
    <string name="filter_price">PRICE</string>
    <string name="filter_rating">RATING</string>
    <string name="clear_button_title">CLEAR</string>
    <string name="filter_delivery">DELIVERY</string>
    <string name="yes_delivery">YES</string>
    <string name="no_delivery">NO</string>
    <string name="filter_your_search_header">Filter your Search:</string>
    <string name="the_lunch_box_rest">The Lunch Box</string>
    <string name="the_lunch_box_price">1</string>
    <string name="the_lunch_box_rating">4.0</string>
    <string name="the_lunch_box_delivery">YES</string>
    <string name="the_lunch_box_contacts">1720 Franklin St, Oakland, CA 94612</string>
    <string name="the_lunch_box_description">New American</string>
    <string name="bacheesos_rest">Bacheesos</string>
    <string name="bacheesos_price">1</string>
    <string name="bacheesos_rating">3.5</string>
    <string name="bacheesos_delivery">YES</string>
    <string name="bacheesos_contacts">246 Grand Ave Oakland, CA 94610</string>
    <string name="bacheesos_description">Mediterranean</string>
    <string name="flora_rest"><![CDATA[Flora Restaurant & Bar]]></string>
    <string name="flora_price">3</string>
    <string name="flora_rating">4.0</string>
    <string name="flora_delivery">NO</string>
    <string name="flora_contacts">1900 Telegraph Ave, Oakland, CA 94612</string>
    <string name="flora_description">New American</string>
    <string name="kingston_rest">Kingston 11 Cuisine</string>
    <string name="kingston_price">3</string>
    <string name="kingston_rating">4.0</string>
    <string name="kingston_delivery">NO</string>
    <string name="kingston_contacts">2270 Telegraph Ave, Oakland, CA 94612</string>
    <string name="kingston_description">Caribbean</string>
    <string name="ozumo_rest">Ozumo</string>
    <string name="ozumo_price">3</string>
    <string name="ozumo_rating">3.5</string>
    <string name="ozumo_delivery">NO</string>
    <string name="ozumo_contacts">2251 Broadway, Oakland, CA 94612</string>
    <string name="ozumo_description">Sushi Bars</string>
    <string name="ikes_rest">Ike’s Place</string>
    <string name="ikes_price">2</string>
    <string name="ikes_rating">4.0</string>
    <string name="ikes_delivery">YES</string>
    <string name="ikes_contacts">2204 Broadway, Oakland, CA 94612</string>
    <string name="ikes_description">Sandwiches</string>
    <string name="pican_rest">Picán</string>
    <string name="pican_price">4</string>
    <string name="pican_rating">4.5</string>
    <string name="pican_delivery">NO</string>
    <string name="pican_contacts">2295 Broadway, Oakland, CA 94612</string>
    <string name="pican_description">Southern</string>
    <string name="fat_cat_rest">Fat Cat Cafe</string>
    <string name="fat_cat_price">1</string>
    <string name="fat_cat_rating">4.0</string>
    <string name="fat_cat_delivery">YES</string>
    <string name="fat_cat_contacts">1720 Telegraph Ave, Oakland, CA 94612</string>
    <string name="fat_cat_description">Sandwiches</string>
    <string name="liba_rest">Liba Falafel</string>
    <string name="liba_price">2</string>
    <string name="liba_rating">4.5</string>
    <string name="liba_delivery">NO</string>
    <string name="liba_contacts">380 17th St, Oakland, CA 94612</string>
    <string name="liba_description">Falafel</string>
    <string name="xolo_rest">Xolo</string>
    <string name="xolo_price">1</string>
    <string name="xolo_rating">3.5</string>
    <string name="xolo_delivery">YES</string>
    <string name="xolo_conacts">1916 Telegraph Ave, Oakland, CA 94612</string>
    <string name="xolo_description">Mexican</string>
    <string name="hawker_fare_rest">Hawker Fare</string>
    <string name="hawker_fare_price">3</string>
    <string name="hawker_fare_rating">3.0</string>
    <string name="hawker_fare_delivery">NO</string>
    <string name="hawker_fare_contacts">301 Franklin St, Oakland, CA 94607</string>
    <string name="hawker_fare_description">Laotian</string>
    <string name="henry_rest">Henry’s Gallery Cafe</string>
    <string name="henry_price">1</string>
    <string name="henry_rating">4.0</string>
    <string name="henry_delivery">NO</string>
    <string name="henry_contacts">1700 Franklin St, Oakland, CA 94612</string>
    <string name="henry_description">New American</string>
    <string name="mazzat_rest">Mazzat Grill</string>
    <string name="mazzat_price">2</string>
    <string name="mazzat_rating">5.0</string>
    <string name="mazzat_delivery">YES</string>
    <string name="mazzat_contacts">1924 Franklin St, Oakland, CA 94612</string>
    <string name="mazzat_description">Falafel</string>
    <string name="torpedo_rest">Torpedo Sushi</string>
    <string name="torpedo_price">2</string>
    <string name="torpedo_rating">4.0</string>
    <string name="torpedo_delivery">YES</string>
    <string name="torpedo_contacts">25 Grand Ave, Oakland, CA 94612</string>
    <string name="torpedo_description">Sushi Bars</string>
    <string name="space_burger_rest">Space Burger</string>
    <string name="space_burger_price">2</string>
    <string name="space_burger_rating">2.5</string>
    <string name="space_burger_delivery">NO</string>
    <string name="space_burger_contacts">2150 Telegraph Ave, Oakland, CA 94612</string>
    <string name="space_burger_description">Burgers</string>
    <string name="title_activity_maps">Map</string>

</resources>
