<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    tools:context="com.mikhail.project2.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:textAlignment="center" />


    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="5dp"
        android:text="@string/neighborhood_name"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />


    <TextView
        android:id="@+id/dollarOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/selector"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:text="@string/one_dollar"
        android:textSize="33sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dollarTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="200dp"
        android:layout_toEndOf="@+id/dollarOne"
        android:background="@drawable/selector"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:text="@string/two_dollars"
        android:textSize="33sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dollarThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="200dp"
        android:layout_toEndOf="@+id/dollarTwo"
        android:background="@drawable/selector"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:text="@string/three_dollars"
        android:textSize="33sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dollarFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="200dp"
        android:layout_toEndOf="@+id/dollarThree"
        android:background="@drawable/selector"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:text="@string/four_dollars"
        android:textSize="33sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/search_button"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="160sp"
        android:text="@string/filter_price"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="245sp"
        android:text="@string/filter_rating"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />


    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/header"
        android:layout_below="@+id/header"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/clear_button_title"
        android:textSize="15sp" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rating"
        android:layout_centerHorizontal="true"
        android:focusableInTouchMode="true"
        android:numStars="5"
        android:progressBackgroundTint="@android:color/darker_gray" />

    <TextView
        android:id="@+id/delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="335dp"
        android:text="@string/filter_delivery"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="375dp"
        android:background="@drawable/selector"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:text="@string/yes_delivery"
        android:textSize="33sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="375dp"
        android:layout_toEndOf="@+id/yes"
        android:background="@drawable/selector"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:text="@string/no_delivery"
        android:textSize="33sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/header"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/filter_your_search_header"
        android:textAppearance="?android:attr/textAppearanceMedium" />


</RelativeLayout>



